# distributed-file-system

./: README.org  build.sh  docker-compose.yaml  index.html
auth-service/: auth-service.cabal  stack.yaml
auth-service/app/: Main.hs
auth-service/data/: jwk.json
auth-service/src/: App.hs  AuthAPI.hs  Lib.hs  Models.hs
dfs-shared/: LICENSE  dfs-shared.cabal  stack.yaml
dfs-shared/src/: AuthAPI.hs  DirectoryAPI.hs  FileAPI.hs  Models.hs
dfs-shared/src/AuthAPI/: API.hs  Client.hs
dfs-shared/src/DirectoryAPI/: API.hs  Client.hs
dfs-shared/src/FileAPI/: API.hs  Client.hs
directory-service/: directory-service.cabal  stack.yaml
directory-service/app/: Main.hs
directory-service/src/: App.hs  Config.hs
docs/: authentication.org  compileandrun.org  design.org  directory.org  docker.org  fileservice.org  fusefsdriver.org  index.org  locking.org  migrator.org  readthe.org  replication.org  screenshots.org
docs/css/: readtheorg.css
file-service/: file-service.cabal  stack.yaml
file-service/app/: Main.hs
file-service/src/: App.hs  Config.hs
fuse-file-system/: LICENSE  fuse-file-system.cabal  stack.yaml
fuse-file-system/app/: Config.hs  FUSEOps.hs  Main.hs
migrator/: migrator.cabal  stack.yaml
migrator/app/: Main.hs
scripts/: build.sh  build_fuse.sh  create_user.sh
stack-run/: Dockerfile
