name:                dfs-shared
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.org
homepage:            https://github.com/houli/distributed-file-system#readme
license:             MIT
license-file:        LICENSE
author:              Eoin Houlihan
maintainer:          ehoulih@tcd.ie
copyright:           2016 Eoin Houlihan
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AuthAPI.API
                     , AuthAPI.Client
                     , DirectoryAPI.API
                     , DirectoryAPI.Client
                     , FileAPI.API
                     , FileAPI.Client
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , mtl
                     , persistent-postgresql
                     , persistent-template
                     , servant-auth-server
                     , servant-auth-client
                     , servant-client
                     , servant-server
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/houli/distributed-file-system
