name:                file-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.org
homepage:            https://github.com/houli/distributed-file-system#readme
license:             MIT
license-file:        LICENSE
author:              Eoin Houlihan
maintainer:          ehoulih@tcd.ie
copyright:           2016 Eoin Houlihan
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
  other-modules:       Config
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , dfs-shared
                     , directory
                     , http-client
                     , mtl
                     , persistent-postgresql
                     , servant-auth-client
                     , servant-client
                     , servant-server
  default-language:    Haskell2010

executable file-service
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dfs-shared
                     , directory
                     , file-service
                     , monad-logger
                     , persistent-postgresql
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite file-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , file-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/houli/distributed-file-system
